--- a/math/DUDL_math_entropy.ipynb
+++ b/math/DUDL_math_entropy.ipynb
@@ -1,23 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [
-    {
-     "file_id": "1oDaogKfz9gQYSAyQT-uF9xRI3EdrtokO",
-     "timestamp": 1618209287295
-    }
-   ]
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -34,16 +15,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "id": "2TD8IyfBGXiY"
    },
+   "outputs": [],
    "source": [
     "# import libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,34 +39,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "id": "vmjUxlEqGbDu"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong entropy: 0.34657359027997264\n"
+     ]
+    }
+   ],
    "source": [
     "# probability of an event happening\n",
     "p = .25\n",
     "\n",
     "# NOT the correct formula!\n",
     "H = -( p*np.log(p) )\n",
-    "print('Wrong entropy: ' + str(H))"
-   ],
-   "execution_count": null,
-   "outputs": []
+    "print('Wrong entropy: ' + str(H)) #what hapens to the sigma?? It has to be a sumation"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "id": "WHx3wf4Y0TJH"
    },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": [
+    "#We need to run a loop from event 1 to n to cover the total probability and hence total entropy"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "id": "HdZadwd12RGv"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct entropy: 0.5623351446188083\n"
+     ]
+    }
+   ],
    "source": [
     "# the correct way to compute entropy\n",
     "x = [.25,.75]\n",
@@ -95,22 +96,29 @@
     "  H -= p*np.log(p)\n",
     "\n",
     "print('Correct entropy: ' + str(H))"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "id": "R_bGT7kd2ipR"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct entropy: 0.5623351446188083\n"
+     ]
+    }
+   ],
    "source": [
     "# also correct, written out for N=2 events\n",
+    "#Binary entropy\n",
     "H = -( p*np.log(p) + (1-p)*np.log(1-p) )\n",
     "print('Correct entropy: ' + str(H))"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,14 +126,24 @@
     "id": "qFN5779d1ebD"
    },
    "source": [
-    "# Cross-entropy"
+    "#Binary  Cross-entropy"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "id": "sOug_tPzHY1y"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross entropy: 1.3862943611198906\n"
+     ]
+    }
+   ],
    "source": [
     "# note: all probs must sum to 1!\n",
     "p = [   1,0   ] # sum=1\n",
@@ -136,32 +154,52 @@
     "  H -= p[i]*np.log(q[i])\n",
     "\n",
     "print('Cross entropy: ' + str(H))"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "id": "8H1p7JUr3Pn4"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct entropy: 1.3862943611198906\n",
+      "Manually simplified: 1.3862943611198906\n"
+     ]
+    }
+   ],
    "source": [
     "# also correct, written out for N=2 events\n",
-    "H = -( p[0]*np.log(q[0]) + p[1]*np.log(q[1]) )\n",
+    "H = -( p[0]*np.log(q[0]) + p[1]*np.log(q[1]) ) #2 events , p0 and p1\n",
     "print('Correct entropy: ' + str(H))\n",
     "\n",
     "# simplification\n",
     "H = -np.log(q[0])\n",
     "print('Manually simplified: ' + str(H))"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "id": "fAHoba2V4QgO"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(75.)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# now using pytorch\n",
     "import torch\n",
@@ -171,48 +209,82 @@
     "q_tensor = torch.Tensor(q)\n",
     "p_tensor = torch.Tensor(p)\n",
     "\n",
-    "F.binary_cross_entropy(p,q)"
-   ],
-   "execution_count": null,
-   "outputs": []
+    "F.binary_cross_entropy(p_tensor,q_tensor)"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [],
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 36
     },
-    "id": "QBQabnEEJisd",
     "executionInfo": {
+     "elapsed": 4,
      "status": "ok",
      "timestamp": 1692941200690,
-     "user_tz": -180,
-     "elapsed": 4,
      "user": {
       "displayName": "Mike X Cohen",
       "userId": "13901636194183843661"
-     }
+     },
+     "user_tz": -180
     },
+    "id": "QBQabnEEJisd",
     "outputId": "c0f67256-1c5e-4929-86b8-ec36f2db4f1d"
    },
-   "execution_count": 14,
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'2.0.1+cu118'"
-      ],
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      }
+       "tensor(1.3863)"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "F.binary_cross_entropy(q_tensor,p_tensor)  #Same as we got above!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": [
+    {
+     "file_id": "1oDaogKfz9gQYSAyQT-uF9xRI3EdrtokO",
+     "timestamp": 1618209287295
     }
    ]
+  },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
- ]
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
