--- a/math/DUDL_math_derivatives2.ipynb
+++ b/math/DUDL_math_derivatives2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "id": "YvEj7AGdffUn"
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "id": "2WUCrL06fngf"
    },
@@ -173,7 +173,7 @@
     "dg = sym.diff(gx)\n",
     "\n",
     "# apply the product rule \"manually\"\n",
-    "manual = df*gx + fx*dg\n",
+    "manual = df*gx + fx*dg #Using the chain rule\n",
     "thewrongway = df*dg\n",
     "\n",
     "# via sympy\n",
