--- a/gradientDescent/DUDL_GradientDescent_1D.ipynb
+++ b/gradientDescent/DUDL_GradientDescent_1D.ipynb
@@ -1,29 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [
-    {
-     "file_id": "1qFigOOWXcSNyA6hPpZnF-QqhFEB1e-hy",
-     "timestamp": 1597210805829
-    },
-    {
-     "file_id": "1kGRo0g3UXxXpJuQSEtpKjEGA1Vxbaz8S",
-     "timestamp": 1597128018290
-    },
-    {
-     "file_id": "1U4oG0A3DFC-XBWhvecYeA3YYReqHpShX",
-     "timestamp": 1594575042741
-    }
-   ],
-   "authorship_tag": "ABX9TyPYoewyzb58f8ctFslnMpqP"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -40,9 +15,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "JL_0UKJOj1YP"
    },
+   "outputs": [],
    "source": [
     "# import all necessary modules\n",
     "import numpy as np\n",
@@ -50,9 +27,7 @@
     "\n",
     "import matplotlib_inline.backend_inline\n",
     "matplotlib_inline.backend_inline.set_matplotlib_formats('svg')"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,9 +40,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "YwTBzVJsoKbg"
    },
+   "outputs": [],
    "source": [
     "# function (as a function)\n",
     "def fx(x):\n",
@@ -76,15 +53,15 @@
     "# derivative function\n",
     "def deriv(x):\n",
     "  return 6*x - 3"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "_qRE_fHqUL6n"
    },
+   "outputs": [],
    "source": [
     "# plot the function and its derivative\n",
     "\n",
@@ -99,26 +76,26 @@
     "plt.ylabel('f(x)')\n",
     "plt.legend(['y','dy'])\n",
     "plt.show()"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "r-f27UUkZYpG"
    },
+   "outputs": [],
    "source": [
     "\n"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "-nzWuHfWVHyU"
    },
+   "outputs": [],
    "source": [
     "# random starting point\n",
     "localmin = np.random.choice(x,1)\n",
@@ -134,15 +111,15 @@
     "  localmin = localmin - learning_rate*grad\n",
     "\n",
     "localmin"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "3hIord_pVIU8"
    },
+   "outputs": [],
    "source": [
     "# plot the results\n",
     "\n",
@@ -157,9 +134,7 @@
     "plt.legend(['f(x)','df','f(x) min'])\n",
     "plt.title('Empirical local minimum: %s'%localmin[0])\n",
     "plt.show()"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,9 +147,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "M22aVI6xVIbk"
    },
+   "outputs": [],
    "source": [
     "# random starting point\n",
     "localmin = np.random.choice(x,1)\n",
@@ -190,15 +167,15 @@
     "  localmin = localmin - learning_rate*grad\n",
     "  modelparams[i,0] = localmin\n",
     "  modelparams[i,1] = grad\n"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "AInqnFtkVIeb"
    },
+   "outputs": [],
    "source": [
     "# plot the gradient over iterations\n",
     "\n",
@@ -213,18 +190,16 @@
     "ax[1].set_ylabel('Derivative')\n",
     "\n",
     "plt.show()"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "MAGG5fMMVIhM"
    },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -237,9 +212,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "ib3uQtfv9wE2"
    },
+   "outputs": [],
    "source": [
     "# 1) Most often in DL, the model trains for a set number of iterations, which is what we do here. But there are other ways\n",
     "#    of defining how long the training lasts. Modify the code so that training ends when the derivative is smaller than \n",
@@ -250,9 +227,37 @@
     "# 3) Can you think of any potential problems that might arise when the stopping criterion is based on the derivative \n",
     "#    instead of a specified number of training epochs?\n",
     "# "
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyPYoewyzb58f8ctFslnMpqP",
+   "provenance": [
+    {
+     "file_id": "1qFigOOWXcSNyA6hPpZnF-QqhFEB1e-hy",
+     "timestamp": 1597210805829
+    },
+    {
+     "file_id": "1kGRo0g3UXxXpJuQSEtpKjEGA1Vxbaz8S",
+     "timestamp": 1597128018290
+    },
+    {
+     "file_id": "1U4oG0A3DFC-XBWhvecYeA3YYReqHpShX",
+     "timestamp": 1594575042741
+    }
+   ]
+  },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.12.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
