--- a/gradientDescent/DUDL_GradientDescent_codeChallenge_lr.ipynb
+++ b/gradientDescent/DUDL_GradientDescent_codeChallenge_lr.ipynb
@@ -1,33 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [
-    {
-     "file_id": "1AKaKETDfNqVEFzv5BnYGSjHfaPtFpH4x",
-     "timestamp": 1617036007367
-    },
-    {
-     "file_id": "1qFigOOWXcSNyA6hPpZnF-QqhFEB1e-hy",
-     "timestamp": 1597210805829
-    },
-    {
-     "file_id": "1kGRo0g3UXxXpJuQSEtpKjEGA1Vxbaz8S",
-     "timestamp": 1597128018290
-    },
-    {
-     "file_id": "1U4oG0A3DFC-XBWhvecYeA3YYReqHpShX",
-     "timestamp": 1594575042741
-    }
-   ],
-   "authorship_tag": "ABX9TyPJEKg34uwM2jsl7450q0mG"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -44,9 +15,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "JL_0UKJOj1YP"
    },
+   "outputs": [],
    "source": [
     "# import all necessary modules\n",
     "import numpy as np\n",
@@ -54,9 +27,7 @@
     "\n",
     "import matplotlib_inline.backend_inline\n",
     "matplotlib_inline.backend_inline.set_matplotlib_formats('svg')"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,9 +40,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "YwTBzVJsoKbg"
    },
+   "outputs": [],
    "source": [
     "# define a range for x\n",
     "x = np.linspace(-2,2,2001)\n",
@@ -83,9 +56,7 @@
     "# derivative function\n",
     "def deriv(x):\n",
     "  return 6*x - 3"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,9 +69,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "yB8dmH-nvJ_D"
    },
+   "outputs": [],
    "source": [
     "# random starting point\n",
     "localmin = np.random.choice(x,1)\n",
@@ -127,9 +100,7 @@
     "  modelparamsFixed[i,0] = localmin\n",
     "  modelparamsFixed[i,1] = grad\n",
     "  modelparamsFixed[i,2] = lr"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,9 +113,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "M22aVI6xVIbk"
    },
+   "outputs": [],
    "source": [
     "# random starting point\n",
     "localmin = np.random.choice(x,1)\n",
@@ -171,9 +144,7 @@
     "  modelparamsGrad[i,0] = localmin\n",
     "  modelparamsGrad[i,1] = grad\n",
     "  modelparamsGrad[i,2] = lr"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,9 +157,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "X6OWQULR30oV"
    },
+   "outputs": [],
    "source": [
     "# redefine parameters\n",
     "learning_rate = .1\n",
@@ -203,9 +176,7 @@
     "  modelparamsTime[i,0] = localmin\n",
     "  modelparamsTime[i,1] = grad\n",
     "  modelparamsTime[i,2] = lr"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,9 +189,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "AInqnFtkVIeb"
    },
+   "outputs": [],
    "source": [
     "fig,ax = plt.subplots(1,3,figsize=(10,3))\n",
     "\n",
@@ -238,9 +211,7 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,9 +224,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "m54Y_kYXiwO9"
    },
+   "outputs": [],
    "source": [
     "# 1) Change the initial learning rate in the \"time\" experiment from .1 to .01. Do you still reach the same conclusion that\n",
     "#    dynamic learning rates are better than a fixed learning rate?\n",
@@ -271,9 +244,41 @@
     "#    Is that appropriate or inappropriate for this experiment? Why? Change the code so that the starting value is the\n",
     "#    same for all three learning rate models.\n",
     "# "
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyPJEKg34uwM2jsl7450q0mG",
+   "provenance": [
+    {
+     "file_id": "1AKaKETDfNqVEFzv5BnYGSjHfaPtFpH4x",
+     "timestamp": 1617036007367
+    },
+    {
+     "file_id": "1qFigOOWXcSNyA6hPpZnF-QqhFEB1e-hy",
+     "timestamp": 1597210805829
+    },
+    {
+     "file_id": "1kGRo0g3UXxXpJuQSEtpKjEGA1Vxbaz8S",
+     "timestamp": 1597128018290
+    },
+    {
+     "file_id": "1U4oG0A3DFC-XBWhvecYeA3YYReqHpShX",
+     "timestamp": 1594575042741
+    }
+   ]
+  },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.12.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
