--- a/gradientDescent/DUDL_GradientDescent_2D.ipynb
+++ b/gradientDescent/DUDL_GradientDescent_2D.ipynb
@@ -559,7 +559,7 @@
     "for i in range(training_epochs):\n",
     "  grad = np.array([ df_x(localmin[0],localmin[1]).evalf(), \n",
     "                    df_y(localmin[0],localmin[1]).evalf() \n",
-    "                  ])\n",
+    "                  ])#For gradient ascent, we can do -1* this expression and it is going to give us gradient ascent\n",
     "  \n",
     "  '''Inside the loop, this line calculates the gradients (partial derivatives) of the function at the current localmin coordinates.\n",
     "df_x and df_y are functions that return the gradient of the function with respect to \n",
