--- a/gradientDescent/DUDL_GradientDescent_codeChallenge_lr.ipynb
+++ b/gradientDescent/DUDL_GradientDescent_codeChallenge_lr.ipynb
@@ -135,7 +135,10 @@
     "  grad = deriv(localmin)\n",
     "\n",
     "  # adapt the learning rate according to the gradient\n",
-    "  lr = learning_rate*np.abs(grad)\n",
+    "  #When grad is large we are away from the min, so lr is high, model takes large steps\n",
+    "  #As we reach the minimum, lr gets smaller, model takes smaller steps due to mutipication with grad and adopting an adaptive learning rate\n",
+    "\n",
+    "  lr = learning_rate*np.abs(grad) #why np.abs? Becasue in case grad is negative, we dont want the code to start applyng gradient ascent\n",
     "\n",
     "  # update parameter according to g.d.\n",
     "  localmin = localmin - lr*grad\n",
