--- a/gradientDescent/DUDL_GradientDescent_codeChallenge_lr.ipynb
+++ b/gradientDescent/DUDL_GradientDescent_codeChallenge_lr.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "JL_0UKJOj1YP"
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "YwTBzVJsoKbg"
    },
@@ -69,11 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "yB8dmH-nvJ_D"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3n/wt5p5ysx6zb5xqh008fhym3w0000gp/T/ipykernel_4029/2662042246.py:31: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  modelparamsFixed[i,0] = localmin\n",
+      "/var/folders/3n/wt5p5ysx6zb5xqh008fhym3w0000gp/T/ipykernel_4029/2662042246.py:32: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  modelparamsFixed[i,1] = grad\n"
+     ]
+    }
+   ],
    "source": [
     "# random starting point\n",
     "localmin = np.random.choice(x,1)\n",
@@ -83,8 +94,16 @@
     "learning_rate = .01\n",
     "training_epochs = 50\n",
     "\n",
+    "'''Structure of the Array:\n",
+    "The array has training_epochs rows, where each row corresponds to a single epoch (iteration) of the training process.\n",
+    "The number 3 represents the number of columns in each row, meaning that for each epoch, three different values are being stored.\n",
+    "Purpose of Each Column:\n",
+    "modelparamsFixed[i, 0]: This column stores the updated parameter value (localmin) at the end of each epoch.\n",
+    "modelparamsFixed[i, 1]: This column stores the computed gradient (grad) at that epoch.\n",
+    "modelparamsFixed[i, 2]: This column stores the learning rate (lr) used during that epoch.'''\n",
+    "\n",
     "# run through training and store all the results\n",
-    "modelparamsFixed = np.zeros((training_epochs,3))\n",
+    "modelparamsFixed = np.zeros((training_epochs,3)) #four columns\n",
     "for i in range(training_epochs):\n",
     "  \n",
     "  # compute gradient\n",
@@ -99,8 +118,17 @@
     "  # store the parameters\n",
     "  modelparamsFixed[i,0] = localmin\n",
     "  modelparamsFixed[i,1] = grad\n",
-    "  modelparamsFixed[i,2] = lr"
+    "  modelparamsFixed[i,2] = lr\n",
+    "\n",
+    "  #So in the end we have a 50*3 matrix with columns training epoch, local min, grad,lr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -113,11 +141,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "M22aVI6xVIbk"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3n/wt5p5ysx6zb5xqh008fhym3w0000gp/T/ipykernel_4029/3428914361.py:26: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  modelparamsGrad[i,0] = localmin\n",
+      "/var/folders/3n/wt5p5ysx6zb5xqh008fhym3w0000gp/T/ipykernel_4029/3428914361.py:27: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  modelparamsGrad[i,1] = grad\n",
+      "/var/folders/3n/wt5p5ysx6zb5xqh008fhym3w0000gp/T/ipykernel_4029/3428914361.py:28: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  modelparamsGrad[i,2] = lr\n"
+     ]
+    }
+   ],
    "source": [
     "# random starting point\n",
     "localmin = np.random.choice(x,1)\n",
@@ -146,7 +187,9 @@
     "  # store the parameters\n",
     "  modelparamsGrad[i,0] = localmin\n",
     "  modelparamsGrad[i,1] = grad\n",
-    "  modelparamsGrad[i,2] = lr"
+    "  modelparamsGrad[i,2] = lr\n",
+    "\n",
+    "  #Learning rate, gradient and localmin for each epoch"
    ]
   },
   {
@@ -160,11 +203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "X6OWQULR30oV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3n/wt5p5ysx6zb5xqh008fhym3w0000gp/T/ipykernel_4029/287006009.py:11: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  modelparamsTime[i,0] = localmin\n",
+      "/var/folders/3n/wt5p5ysx6zb5xqh008fhym3w0000gp/T/ipykernel_4029/287006009.py:12: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  modelparamsTime[i,1] = grad\n"
+     ]
+    }
+   ],
    "source": [
     "# redefine parameters\n",
     "learning_rate = .1\n",
@@ -278,7 +332,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
