--- a/ANN/DUDL_ANN_codeChallenge_regression.ipynb
+++ b/ANN/DUDL_ANN_codeChallenge_regression.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 18,
@@ -111,7 +111,7 @@
     "\n",
     "\n",
     "  ### compute model predictions\n",
-    "  predictions = ANNreg(x)\n",
+    "  predictions = ANNreg(x) #Outputs the preidctions after all the trainign is finished\n",
     "\n",
     "\n",
     "  # output:\n",
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2228,7 +2228,9 @@
     "outputId": "db9892c7-ce17-474e-fa4e-cfb4b95a2fbe"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#test the model once before you start running it for 3 hour and rwalising it is a mistake"
+   ]
   },
   {
    "cell_type": "markdown",
