--- a/ANN/DUDL_ANN_codeChallengeQwerties.ipynb
+++ b/ANN/DUDL_ANN_codeChallengeQwerties.ipynb
@@ -1,23 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "name": "DUDL_ANN_codeChallengeQwerties.ipynb",
-   "provenance": [
-    {
-     "file_id": "1YpHocGI4rApOxIBb1ZghCU5L-hFnv4CK",
-     "timestamp": 1619331131782
-    }
-   ],
-   "collapsed_sections": [],
-   "authorship_tag": "ABX9TyNyqevL6vPNW79RM1uTontq"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -34,9 +15,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "id": "YeuAheYyhdZw"
    },
+   "outputs": [],
    "source": [
     "# import libraries\n",
     "import numpy as np\n",
@@ -46,9 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib_inline.backend_inline\n",
     "matplotlib_inline.backend_inline.set_matplotlib_formats('svg')"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,9 +42,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "MU7rvmWuhjud"
    },
+   "outputs": [],
    "source": [
     "# create data\n",
     "\n",
@@ -98,9 +81,7 @@
     "plt.xlabel('qwerty dimension 1')\n",
     "plt.ylabel('qwerty dimension 2')\n",
     "plt.show()"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,9 +94,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "v0JMIGb1iV_9"
    },
+   "outputs": [],
    "source": [
     "# model architecture\n",
     "ANNq = nn.Sequential(\n",
@@ -130,24 +113,22 @@
     "\n",
     "# optimizer\n",
     "optimizer = torch.optim.SGD(ANNq.parameters(),lr=.01)"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "YcvZpU6_rUGO"
    },
+   "outputs": [],
    "source": [
     "# test the model\n",
     "yHat = ANNq(data)\n",
     "\n",
     "print(data.shape)\n",
     "print(yHat.shape)"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,9 +141,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "cVD1nFTli7TO"
    },
+   "outputs": [],
    "source": [
     "numepochs = 10000\n",
     "\n",
@@ -198,9 +181,7 @@
     "  \n",
     "predlabels = torch.argmax(predictions,axis=1)\n",
     "totalacc = 100*torch.mean((predlabels == labels).float())"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,9 +194,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "JYouZAY4i3jM"
    },
+   "outputs": [],
    "source": [
     "# report accuracy\n",
     "print('Final accuracy: %g%%' %totalacc)\n",
@@ -232,27 +215,27 @@
     "ax[1].set_xlabel('epoch')\n",
     "ax[1].set_title('Accuracy')\n",
     "plt.show()"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "St6NI4qBk4tO"
    },
+   "outputs": [],
    "source": [
     "# confirm that all model predictions sum to 1\n",
     "torch.sum(yHat,axis=1)"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "gB8-aMAF_xIQ"
    },
+   "outputs": [],
    "source": [
     "# plot the raw model outputs\n",
     "\n",
@@ -266,20 +249,16 @@
     "plt.ylabel('Probability')\n",
     "plt.legend(['qwert 1','qwert 2','qwert 2'],loc=(1.01,.4))\n",
     "plt.show()"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "zvLH4h6ek5Ax"
    },
-   "source": [
-    ""
-   ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -292,9 +271,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "zIXi3fONIKVA"
    },
+   "outputs": [],
    "source": [
     "# 1) Does the model always do well? Re-run the entire notebook multiple times and see if it always reaches high accuracy\n",
     "#    (e.g., >90%). What do you think would be ways to improve the performance stability of the model?\n",
@@ -304,9 +285,39 @@
     "#    would change and what would be the same in the rest of the notebook?\n",
     "#    (Note about this problem: If it feels too advanced, then revisit this problem after the \"Metaparameters\" section.)\n",
     "# "
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyNyqevL6vPNW79RM1uTontq",
+   "collapsed_sections": [],
+   "name": "DUDL_ANN_codeChallengeQwerties.ipynb",
+   "provenance": [
+    {
+     "file_id": "1YpHocGI4rApOxIBb1ZghCU5L-hFnv4CK",
+     "timestamp": 1619331131782
+    }
+   ]
+  },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
