--- a/ANN/DUDL_ANN_nHiddenUnits.ipynb
+++ b/ANN/DUDL_ANN_nHiddenUnits.ipynb
@@ -1,20 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [
-    {
-     "file_id": "1YpHocGI4rApOxIBb1ZghCU5L-hFnv4CK",
-     "timestamp": 1615925514977
-    }
-   ]
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -31,9 +15,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "YeuAheYyhdZw"
    },
+   "outputs": [],
    "source": [
     "# import libraries\n",
     "import torch\n",
@@ -41,9 +27,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,9 +40,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "MU7rvmWuhjud"
    },
+   "outputs": [],
    "source": [
     "# import dataset\n",
     "import pandas as pd\n",
@@ -68,15 +54,15 @@
     "# some plots to show the data\n",
     "sns.pairplot(iris, hue='species')\n",
     "plt.show()"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "vJPkH6Bfh01_"
    },
+   "outputs": [],
    "source": [
     "# organize the data\n",
     "\n",
@@ -90,9 +76,7 @@
     "labels[iris.species=='virginica'] = 2\n",
     "\n",
     "labels"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,9 +89,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "v0JMIGb1iV_9"
    },
+   "outputs": [],
    "source": [
     "# Note the input into the function!\n",
     "def createIrisModel(nHidden):\n",
@@ -129,15 +115,15 @@
     "  optimizer = torch.optim.SGD(ANNiris.parameters(),lr=.01)\n",
     "\n",
     "  return ANNiris,lossfun,optimizer"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "cVD1nFTli7TO"
    },
+   "outputs": [],
    "source": [
     "# a function to train the model\n",
     "\n",
@@ -167,9 +153,7 @@
     "\n",
     "  predlabels = torch.argmax(predictions,axis=1)\n",
     "  return 100*torch.mean((predlabels==labels).float())"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,9 +166,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "hWOzwwHTrdxz"
    },
+   "outputs": [],
    "source": [
     "numepochs  = 150\n",
     "numhiddens = np.arange(1,129)\n",
@@ -198,15 +184,15 @@
     "  # run the model\n",
     "  acc = trainTheModel(ANNiris)\n",
     "  accuracies.append( acc )\n"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "JYouZAY4i3jM"
    },
+   "outputs": [],
    "source": [
     "# report accuracy\n",
     "fig,ax = plt.subplots(1,figsize=(12,6))\n",
@@ -218,18 +204,16 @@
     "ax.set_xlabel('Number of hidden units')\n",
     "ax.set_title('Accuracy')\n",
     "plt.show()\n"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "zvLH4h6ek5Ax"
    },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -242,9 +226,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "zIXi3fONIKVA"
    },
+   "outputs": [],
    "source": [
     "# 1) The results here show that models with fewer than ~50 hidden units have lackluster performance. Would these models\n",
     "#    eventually learn if they were given more training epochs? Try this by re-running the experiment using 500 epochs.\n",
@@ -256,10 +242,29 @@
     "# 3) With simple models and small datasets, it's possible to test many different parameter settings. However, larger\n",
     "#    models take longer to train, and so running 128 tests is not always feasible. Modify the code to have the number of\n",
     "#    hidden units range from 1 to 128 in steps of 14. Plot the results on top of the results using steps of 1 (that is,\n",
-    "#    show both results in the same graph). Does your interpretation change with fewer experiment runs?\n"
-   ],
-   "execution_count": null,
-   "outputs": []
+    "#    show both results in the same graph). Does your interpretation change with fewer experiment runs?"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": [
+    {
+     "file_id": "1YpHocGI4rApOxIBb1ZghCU5L-hFnv4CK",
+     "timestamp": 1615925514977
+    }
+   ]
+  },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.12.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
